Trying to get detail label to work for dictionary

--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" misplaced="YES" id="lAJ-DY-08A">
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="lAJ-DY-08A">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
@@ -92,7 +92,7 @@
                     <navigationItem key="navigationItem" title="Main View Controller" id="5QZ-f7-pKH">
                         <barButtonItem key="rightBarButtonItem" title="Dictionary" id="dvH-95-jDa">
                             <connections>
-                                <segue destination="aTw-W0-5fG" kind="show" id="G6G-CR-SRv"/>
+                                <segue destination="aTw-W0-5fG" kind="show" identifier="showDetail" id="G6G-CR-SRv"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -140,7 +140,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="dictionarySignLabel" destination="Ng5-iA-nhk" id="Tqn-Hw-kru"/>
-                                    <segue destination="zEp-Ru-L2q" kind="show" id="T7K-rQ-Z3d"/>
+                                    <segue destination="zEp-Ru-L2q" kind="show" identifier="showDictionary" id="T7K-rQ-Z3d"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -154,10 +154,10 @@
             </objects>
             <point key="canvasLocation" x="3920" y="-51"/>
         </scene>
-        <!--View Controller-->
+        <!--Dictionary Detail View Controller-->
         <scene sceneID="rIe-wM-sxj">
             <objects>
-                <viewController id="zEp-Ru-L2q" sceneMemberID="viewController">
+                <viewController id="zEp-Ru-L2q" customClass="DictionaryDetailViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Pr7-XX-6lU"/>
                         <viewControllerLayoutGuide type="bottom" id="g2h-BK-1WM"/>
@@ -165,8 +165,25 @@
                     <view key="view" contentMode="scaleToFill" id="BSr-w0-jay">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IAi-aq-XF8">
+                                <rect key="frame" x="166" y="102" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IAi-aq-XF8" firstAttribute="top" secondItem="Pr7-XX-6lU" secondAttribute="bottom" constant="38" id="5E3-rb-F38"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="IAi-aq-XF8" secondAttribute="trailing" id="7b0-e6-WVv"/>
+                            <constraint firstItem="g2h-BK-1WM" firstAttribute="top" secondItem="IAi-aq-XF8" secondAttribute="bottom" constant="544" id="WfS-Zt-J9R"/>
+                            <constraint firstItem="IAi-aq-XF8" firstAttribute="leading" secondItem="BSr-w0-jay" secondAttribute="leadingMargin" constant="150" id="mL0-ex-Ub0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="dictionarySignLabel" destination="IAi-aq-XF8" id="ugU-qt-tM4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xzv-NM-GXE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -224,6 +241,6 @@
         <image name="010" width="454" height="252.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Yj8-lS-ana"/>
+        <segue reference="dmP-27-GYr"/>
     </inferredMetricsTieBreakers>
 </document>
