--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cHq-Tq-JQx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -89,6 +89,7 @@
                             <outlet property="delegate" destination="W0s-xL-GQ5" id="b5h-UE-ZvE"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="8GF-uw-BAz"/>
                     <navigationItem key="navigationItem" title="Main View Controller" id="5QZ-f7-pKH">
                         <barButtonItem key="rightBarButtonItem" title="Dictionary" id="dvH-95-jDa">
                             <connections>
@@ -96,6 +97,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="searchBar" destination="lAJ-DY-08A" id="wAb-8Q-BTm"/>
                         <outlet property="searchDisplayController" destination="dkv-Y1-Ozt" id="ATE-fr-B4o"/>
@@ -153,10 +155,29 @@
             </objects>
             <point key="canvasLocation" x="3920" y="-51"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Custom Tab Bar Controller-->
+        <scene sceneID="yNe-hv-FO3">
+            <objects>
+                <tabBarController id="HNB-GD-ld1" customClass="CustomTabBarController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fFq-v3-p8E">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="dkM-V1-T2p" kind="relationship" relationship="viewControllers" id="JlR-Xa-Z6e"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n0c-li-UEn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1162" y="-610"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="3Rp-q3-owV">
             <objects>
                 <navigationController id="dkM-V1-T2p" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="xvL-Y1-Cur"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fcf-CS-7bj">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -174,13 +195,13 @@
             <objects>
                 <splitViewController id="cHq-Tq-JQx" sceneMemberID="viewController">
                     <connections>
-                        <segue destination="dkM-V1-T2p" kind="relationship" relationship="masterViewController" id="97h-2Y-aUx"/>
                         <segue destination="UQ2-4B-Ecv" kind="relationship" relationship="detailViewController" id="Yj8-lS-ana"/>
+                        <segue destination="HNB-GD-ld1" kind="relationship" relationship="masterViewController" id="0dL-gL-siU"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PiN-FO-s5Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1063" y="-72"/>
+            <point key="canvasLocation" x="414" y="77"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vxN-bb-PIK">
@@ -205,6 +226,6 @@
         <image name="010" width="454" height="252.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="dmP-27-GYr"/>
+        <segue reference="Yj8-lS-ana"/>
     </inferredMetricsTieBreakers>
 </document>
