--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -79,10 +79,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="apu-wi-uWm">
-                                <rect key="frame" x="0.0" y="120" width="375" height="498"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="apu-wi-uWm">
+                                <rect key="frame" x="0.0" y="104" width="375" height="498"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="498" id="5K1-2m-8JB"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" textLabel="Av5-Ds-2g8" style="IBUITableViewCellStyleDefault" id="ufZ-IJ-OQf" customClass="SignTableViewCell" customModule="LASDictionaryV2" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -107,52 +109,53 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Meh-Pl-fFG">
-                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Meh-Pl-fFG">
+                                <rect key="frame" x="0.0" y="602" width="375" height="65"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="cma-ZQ-Laq"/>
+                                </constraints>
                                 <items>
                                     <tabBarItem systemItem="favorites" id="pTF-Cw-KzX"/>
                                     <tabBarItem title="Item" id="tp1-2A-aYz"/>
                                     <tabBarItem systemItem="more" id="x8J-r3-HsQ"/>
                                 </items>
                             </tabBar>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V2O-3e-kUX">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="p9Y-Jy-JeP">
+                                <rect key="frame" x="0.0" y="64" width="375" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="tNb-U4-Foh"/>
+                                </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="apu-wi-uWm" firstAttribute="top" secondItem="p9Y-Jy-JeP" secondAttribute="bottom" id="02b-q5-T5h"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="top" secondItem="UQS-pR-koQ" secondAttribute="bottom" id="05j-Jb-TOx"/>
+                            <constraint firstItem="Meh-Pl-fFG" firstAttribute="top" secondItem="apu-wi-uWm" secondAttribute="bottom" id="48n-Ke-olo"/>
+                            <constraint firstAttribute="trailing" secondItem="p9Y-Jy-JeP" secondAttribute="trailing" id="Bd0-M6-SCg"/>
+                            <constraint firstItem="apu-wi-uWm" firstAttribute="top" secondItem="p9Y-Jy-JeP" secondAttribute="bottom" id="EJa-Yz-20v"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="top" secondItem="UQS-pR-koQ" secondAttribute="bottom" id="eDI-2V-6Uw"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="trailing" secondItem="Meh-Pl-fFG" secondAttribute="trailing" id="fpO-Ab-XWQ"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="trailing" secondItem="apu-wi-uWm" secondAttribute="trailing" id="iss-G0-uk5"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="leading" secondItem="apu-wi-uWm" secondAttribute="leading" id="osq-ck-Tzb"/>
+                            <constraint firstItem="apu-wi-uWm" firstAttribute="leading" secondItem="Meh-Pl-fFG" secondAttribute="leading" id="rjx-u7-11j"/>
+                            <constraint firstItem="Meh-Pl-fFG" firstAttribute="leading" secondItem="3up-Pl-p7O" secondAttribute="leading" id="urA-fb-h4a"/>
+                            <constraint firstItem="apu-wi-uWm" firstAttribute="bottom" secondItem="Meh-Pl-fFG" secondAttribute="top" id="vrM-p2-TlI"/>
+                            <constraint firstItem="NcC-iX-pZb" firstAttribute="top" secondItem="Meh-Pl-fFG" secondAttribute="bottom" id="xDC-87-D5h"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vPg-2J-0rP"/>
                     <connections>
                         <outlet property="mainTabBar" destination="Meh-Pl-fFG" id="ome-eF-mjs"/>
-                        <outlet property="searchBar" destination="V2O-3e-kUX" id="kM2-H3-2CG"/>
+                        <outlet property="searchBar" destination="p9Y-Jy-JeP" id="4Ey-VM-1rP"/>
                         <outlet property="tableView" destination="apu-wi-uWm" id="9Gs-7N-tob"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="coi-Ng-AVO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="352.80000000000001" y="-1122.1889055472266"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="R75-wS-nAo">
-            <objects>
-                <viewController id="2WC-yp-rbK" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="a8j-jz-V9n"/>
-                        <viewControllerLayoutGuide type="bottom" id="9j4-bC-OHr"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="YcU-9f-9OX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SvQ-ar-BeU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1243" y="-1117"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="cYT-Z0-vL0">
